objects/Particular__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Particulars</relationshipLabel>
        <relationshipName>Particulars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Enter number of items wanted</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Particulars</relationshipLabel>
        <relationshipName>Particulars</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Particular</label>
    <nameField>
        <label>Particular Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Particulars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>(Quantity__c &lt;= 0) || (Quantity__c &gt; Stock__r.Quantity__c )</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>The quantiyt cannont be zero OR more than in stock</errorMessage>
    </validationRules>
</CustomObject>